# src/main/java/com/kkarimi/eventmanagement/web/AttendeeController.java
@@ -5,6 +5,8 @@ import com.kkarimi.eventmanagement.attendees.AttendeeDirectory;
 import com.kkarimi.eventmanagement.attendees.NewAttendeeCommand;
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -12,8 +14,6 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 @RequestMapping("/api/attendees")
@@ -32,8 +32,8 @@ class AttendeeController {
     }
 
     @GetMapping
-    List<Attendee> list() {
-        return attendeeDirectory.findAll();
+    PageResponse<Attendee> list(@PageableDefault(size = 20, sort = "fullName") Pageable pageable) {
+        return PageResponse.from(attendeeDirectory.findAll(pageable));
     }
 
     record CreateAttendeeRequest(@NotBlank String fullName, @NotBlank @Email String email) {
