# src/main/java/com/kkarimi/eventmanagement/web/RegistrationController.java
@@ -4,6 +4,8 @@ import com.kkarimi.eventmanagement.registration.Registration;
 import com.kkarimi.eventmanagement.registration.RegistrationApplication;
 import com.kkarimi.eventmanagement.registration.RegistrationCommand;
 import jakarta.validation.constraints.NotNull;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -13,7 +15,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.UUID;
 
@@ -40,8 +41,8 @@ class RegistrationController {
     }
 
     @GetMapping
-    List<Registration> list() {
-        return registrationApplication.findAll();
+    PageResponse<Registration> list(@PageableDefault(size = 20, sort = "registeredAt") Pageable pageable) {
+        return PageResponse.from(registrationApplication.findAll(pageable));
     }
 
     record CreateRegistrationRequest(@NotNull UUID eventId, @NotNull UUID attendeeId) {
